# gwbase

./: .gitignore  .readthedocs.yml  .zenodo.json  1_GSLB_well_reach_distance.ipynb  2_GSLB_PCHIP_DeltaWTE_dataset.ipynb  3_GLSB_filter.ipynb  4_GSLB_merge_plot.ipynb  CITATION.cff  LICENSE  README.md  analyze_lag_results.py  combine_r2_statistics_to_excel.py  compare_runs.py  config.yaml  create_excel_from_csv.py  filter_and_plot_pairs.py  main_gwbase.py  mk_pchip_illustration.py  mk_study_area_map.py  mk_study_area_maps.py  mk_well_last50yr.py  mk_well_wte_vs_sf.py  mkdocs-simple.yml  mkdocs.yml  plot_well_timeseries_r2_filtered.py  plot_wte_filtered_analysis.py  pyproject.toml  requirements.txt  sample_well_file.csv  well_reach_relationships_final.csv
.claude/: settings.local.json
docs/: about.md  api-reference.md  code-organization.md  data-guide.md  data-overview.md  index.md  installation.md  notebooks.md  overview.md  requirements.txt  running-the-code.md
gwbase/: __init__.py  analysis.py  cli.py  data_loading.py  filtering.py  interpolation.py  metrics.py  network.py  pairing.py  preprocessing.py  spatial.py  visualization.py  well_summary.py
notebooks/: 01_data_inventory.ipynb  02_terminal_gages.ipynb  03_pchip_interpolation.ipynb  04_pairing_wells_gages.ipynb  05_delta_metrics.ipynb  06_plot_per_gage.ipynb  07_mapping.ipynb  08_mi.ipynb  annual_delta_analysis.py  baseflow_delta_analysis.py  basin_wide_scatter.py  ccf_analysis.py  deseason_qtr_delta_analysis.py  filter_sensitivity_analysis.py  flowchart.ipynb  gage_10153100_highlight_well.py  gslb_slope_aggregation.py  lag_comparison_analysis.py  lag_slope_sign_analysis.py  method_comparison.py  monthly_anom_delta_analysis.py  negative_slope_timeseries.py  plot_bfd_wte_q_schematic.py  plot_elevation_filter_criteria.py  plot_methodology_flowchart.py  quarterly_consec_delta_analysis.py  (+19 more)
(+51 files in other folders)
