[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwbase"
version = "0.1.0"
description = "Groundwater-Surface Water Interaction Analysis Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BYU Hydroinformatics"}
]
keywords = ["groundwater", "hydrology", "water-resources", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "geopandas>=0.12.0",
    "networkx>=2.8.0",
    "scikit-learn>=1.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
maps = [
    "contextily>=1.2.0",
    "cartopy>=0.21.0",
    "geopy>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
full = [
    "gwbase[maps,dev]",
]

[project.scripts]
gwbase = "gwbase.cli:main"

[tool.setuptools]
packages = ["gwbase"]

[tool.setuptools.package-data]
gwbase = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
